packages/parser/antlr/src/ecssParser.java
// Generated from ecss.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ecssParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		NUMBER=18, TRUE=19, FALSE=20, UNSET=21, LPAREN=22, RPAREN=23, LBRACKET=24, 
		RBRACKET=25, LCURLY=26, RCURLY=27, COLON=28, SEMI=29, DOT=30, COMMA=31, 
		PLUS=32, MINUS=33, MULT=34, DIV=35, ASSIGN=36, LESSTHAN=37, GREATERTHAN=38, 
		LESSTHANOREQUAL=39, GREATERTHANOREQUAL=40, EXCLAMATION=41, QUESTION=42, 
		DOLLAR=43, AT=44, QUOTE=45, STRING_LITERAL=46, ESC=47, UNICODE=48, HEX=49, 
		EventIdentifier=50, AtRuleIdentifier=51, Identifier=52, COMMENT=53, WS=54;
	public static final int
		RULE_program = 0, RULE_system = 1, RULE_systemHeader = 2, RULE_componentSelector = 3, 
		RULE_componentId = 4, RULE_queryExpression = 5, RULE_queryOperationParameters = 6, 
		RULE_intersectionQuery = 7, RULE_setoperator = 8, RULE_setOperatorNot = 9, 
		RULE_setOperatorAny = 10, RULE_componentAs = 11, RULE_componentAttributes = 12, 
		RULE_componentAttribute = 13, RULE_componentAttributeComparator = 14, 
		RULE_componentAttributeValue = 15, RULE_var = 16, RULE_queryvar = 17, 
		RULE_systemBody = 18, RULE_componentStatements = 19, RULE_componentStatement = 20, 
		RULE_function = 21, RULE_functionName = 22, RULE_functionParameters = 23, 
		RULE_mathoperatoradditions = 24, RULE_mathoperatorfactors = 25, RULE_expression = 26, 
		RULE_term = 27, RULE_factor = 28, RULE_literal = 29, RULE_stringLiteral = 30, 
		RULE_rgb = 31, RULE_rgba = 32, RULE_boolval = 33, RULE_eventHandler = 34, 
		RULE_eventHandlerHeader = 35, RULE_eventHandlerBody = 36, RULE_arguments = 37, 
		RULE_argument = 38, RULE_atRuleHeader = 39, RULE_atRule = 40, RULE_variableAssignment = 41, 
		RULE_variableAssignmentValue = 42, RULE_define = 43, RULE_defineHeader = 44, 
		RULE_query = 45, RULE_queryHeader = 46, RULE_componentPropertyId = 47, 
		RULE_type = 48, RULE_defineDeclarations = 49, RULE_defineDeclaration = 50;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "system", "systemHeader", "componentSelector", "componentId", 
			"queryExpression", "queryOperationParameters", "intersectionQuery", "setoperator", 
			"setOperatorNot", "setOperatorAny", "componentAs", "componentAttributes", 
			"componentAttribute", "componentAttributeComparator", "componentAttributeValue", 
			"var", "queryvar", "systemBody", "componentStatements", "componentStatement", 
			"function", "functionName", "functionParameters", "mathoperatoradditions", 
			"mathoperatorfactors", "expression", "term", "factor", "literal", "stringLiteral", 
			"rgb", "rgba", "boolval", "eventHandler", "eventHandlerHeader", "eventHandlerBody", 
			"arguments", "argument", "atRuleHeader", "atRule", "variableAssignment", 
			"variableAssignmentValue", "define", "defineHeader", "query", "queryHeader", 
			"componentPropertyId", "type", "defineDeclarations", "defineDeclaration"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':not'", "':any'", "'as'", "'max'", "'min'", "'sin'", "'cos'", 
			"'map'", "'abs'", "'sign'", "'%'", "'rgb('", "'rgba('", "'@define'", 
			"'@query'", "'boolean'", "'number'", null, "'true'", "'false'", "'unset'", 
			"'('", "')'", "'['", "']'", "'{'", "'}'", "':'", "';'", "'.'", "','", 
			"'+'", "'-'", "'*'", "'/'", "'='", "'<'", "'>'", "'<='", "'>='", "'!'", 
			"'?'", "'$'", "'@'", "'\"'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "NUMBER", "TRUE", "FALSE", "UNSET", 
			"LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "LCURLY", "RCURLY", "COLON", 
			"SEMI", "DOT", "COMMA", "PLUS", "MINUS", "MULT", "DIV", "ASSIGN", "LESSTHAN", 
			"GREATERTHAN", "LESSTHANOREQUAL", "GREATERTHANOREQUAL", "EXCLAMATION", 
			"QUESTION", "DOLLAR", "AT", "QUOTE", "STRING_LITERAL", "ESC", "UNICODE", 
			"HEX", "EventIdentifier", "AtRuleIdentifier", "Identifier", "COMMENT", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ecss.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ecssParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public List<SystemContext> system() {
			return getRuleContexts(SystemContext.class);
		}
		public SystemContext system(int i) {
			return getRuleContext(SystemContext.class,i);
		}
		public List<DefineContext> define() {
			return getRuleContexts(DefineContext.class);
		}
		public DefineContext define(int i) {
			return getRuleContext(DefineContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ecssListener ) ((ecssListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ecssListener ) ((ecssListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__13) {
				{
				setState(103); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(102);
					define();
					}
					}
					setState(105); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__13 );
				}
			}

			setState(110); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(109);
				system();
				}
				}
				setState(112); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << LBRACKET) | (1L << LCURLY))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SystemContext extends ParserRuleContext {
		public SystemHeaderContext systemHeader() {
			return getRuleContext(SystemHeaderContext.class,0);
		}
		public SystemBodyContext systemBody() {
			return getRuleContext(SystemBodyContext.class,0);
		}
		public SystemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_system; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ecssListener ) ((ecssListener)listener).enterSystem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ecssListener ) ((ecssListener)listener).exitSystem(this);
		}
	}

	public final SystemContext system() throws RecognitionException {
		SystemContext _localctx = new SystemContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_system);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			systemHeader();
			setState(115);
			systemBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SystemHeaderContext extends ParserRuleContext {
		public QueryExpressionContext queryExpression() {
			return getRuleContext(QueryExpressionContext.class,0);
		}
		public SystemHeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_systemHeader; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ecssListener ) ((ecssListener)listener).enterSystemHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ecssListener ) ((ecssListener)listener).exitSystemHeader(this);
		}
	}

	public final SystemHeaderContext systemHeader() throws RecognitionException {
		SystemHeaderContext _localctx = new SystemHeaderContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_systemHeader);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			queryExpression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComponentSelectorContext extends ParserRuleContext {
		public TerminalNode LBRACKET() { return getToken(ecssParser.LBRACKET, 0); }
		public TerminalNode RBRACKET() { return getToken(ecssParser.RBRACKET, 0); }
		public ComponentIdContext componentId() {
			return getRuleContext(ComponentIdContext.class,0);
		}
		public ComponentAsContext componentAs() {
			return getRuleContext(ComponentAsContext.class,0);
		}
		public ComponentAttributeContext componentAttribute() {
			return getRuleContext(ComponentAttributeContext.class,0);
		}
		public ComponentSelectorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_componentSelector; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ecssListener ) ((ecssListener)listener).enterComponentSelector(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ecssListener ) ((ecssListener)listener).exitComponentSelector(this);
		}
	}

	public final ComponentSelectorContext componentSelector() throws RecognitionException {
		ComponentSelectorContext _localctx = new ComponentSelectorContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_componentSelector);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(LBRACKET);
			setState(123);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(120);
				componentId();
				}
				break;
			case 2:
				{
				setState(121);
				componentAs();
				}
				break;
			case 3:
				{
				setState(122);
				componentAttribute();
				}
				break;
			}
			setState(125);
			match(RBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComponentIdContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(ecssParser.Identifier, 0); }
		public ComponentIdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_componentId; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ecssListener ) ((ecssListener)listener).enterComponentId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ecssListener ) ((ecssListener)listener).exitComponentId(this);
		}
	}

	public final ComponentIdContext componentId() throws RecognitionException {
		ComponentIdContext _localctx = new ComponentIdContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_componentId);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QueryExpressionContext extends ParserRuleContext {
		public IntersectionQueryContext intersectionQuery() {
			return getRuleContext(IntersectionQueryContext.class,0);
		}
		public List<SetoperatorContext> setoperator() {
			return getRuleContexts(SetoperatorContext.class);
		}
		public SetoperatorContext setoperator(int i) {
			return getRuleContext(SetoperatorContext.class,i);
		}
		public List<TerminalNode> LPAREN() { return getTokens(ecssParser.LPAREN); }
		public TerminalNode LPAREN(int i) {
			return getToken(ecssParser.LPAREN, i);
		}
		public List<QueryOperationParametersContext> queryOperationParameters() {
			return getRuleContexts(QueryOperationParametersContext.class);
		}
		public QueryOperationParametersContext queryOperationParameters(int i) {
			return getRuleContext(QueryOperationParametersContext.class,i);
		}
		public List<TerminalNode> RPAREN() { return getTokens(ecssParser.RPAREN); }
		public TerminalNode RPAREN(int i) {
			return getToken(ecssParser.RPAREN, i);
		}
		public QueryExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_queryExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ecssListener ) ((ecssListener)listener).enterQueryExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ecssListener ) ((ecssListener)listener).exitQueryExpression(this);
		}
	}

	public final QueryExpressionContext queryExpression() throws RecognitionException {
		QueryExpressionContext _localctx = new QueryExpressionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_queryExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LBRACKET) {
				{
				setState(129);
				intersectionQuery();
				}
			}

			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0 || _la==T__1) {
				{
				{
				setState(132);
				setoperator();
				setState(133);
				match(LPAREN);
				setState(134);
				queryOperationParameters();
				setState(135);
				match(RPAREN);
				}
				}
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QueryOperationParametersContext extends ParserRuleContext {
		public List<IntersectionQueryContext> intersectionQuery() {
			return getRuleContexts(IntersectionQueryContext.class);
		}
		public IntersectionQueryContext intersectionQuery(int i) {
			return getRuleContext(IntersectionQueryContext.class,i);
		}
		public List<QueryExpressionContext> queryExpression() {
			return getRuleContexts(QueryExpressionContext.class);
		}
		public QueryExpressionContext queryExpression(int i) {
			return getRuleContext(QueryExpressionContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ecssParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ecssParser.COMMA, i);
		}
		public QueryOperationParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_queryOperationParameters; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ecssListener ) ((ecssListener)listener).enterQueryOperationParameters(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ecssListener ) ((ecssListener)listener).exitQueryOperationParameters(this);
		}
	}

	public final QueryOperationParametersContext queryOperationParameters() throws RecognitionException {
		QueryOperationParametersContext _localctx = new QueryOperationParametersContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_queryOperationParameters);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(142);
				intersectionQuery();
				}
				break;
			case 2:
				{
				setState(143);
				queryExpression();
				}
				break;
			}
			setState(153);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(146);
				match(COMMA);
				setState(149);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
				case 1:
					{
					setState(147);
					intersectionQuery();
					}
					break;
				case 2:
					{
					setState(148);
					queryExpression();
					}
					break;
				}
				}
				}
				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntersectionQueryContext extends ParserRuleContext {
		public List<ComponentSelectorContext> componentSelector() {
			return getRuleContexts(ComponentSelectorContext.class);
		}
		public ComponentSelectorContext componentSelector(int i) {
			return getRuleContext(ComponentSelectorContext.class,i);
		}
		public IntersectionQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intersectionQuery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ecssListener ) ((ecssListener)listener).enterIntersectionQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ecssListener ) ((ecssListener)listener).exitIntersectionQuery(this);
		}
	}

	public final IntersectionQueryContext intersectionQuery() throws RecognitionException {
		IntersectionQueryContext _localctx = new IntersectionQueryContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_intersectionQuery);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(156);
				componentSelector();
				}
				}
				setState(159); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==LBRACKET );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SetoperatorContext extends ParserRuleContext {
		public SetOperatorNotContext setOperatorNot() {
			return getRuleContext(SetOperatorNotContext.class,0);
		}
		public SetOperatorAnyContext setOperatorAny() {
			return getRuleContext(SetOperatorAnyContext.class,0);
		}
		public SetoperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setoperator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ecssListener ) ((ecssListener)listener).enterSetoperator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ecssListener ) ((ecssListener)listener).exitSetoperator(this);
		}
	}

	public final SetoperatorContext setoperator() throws RecognitionException {
		SetoperatorContext _localctx = new SetoperatorContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_setoperator);
		try {
			setState(163);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(161);
				setOperatorNot();
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				setState(162);
				setOperatorAny();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SetOperatorNotContext extends ParserRuleContext {
		public SetOperatorNotContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setOperatorNot; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ecssListener ) ((ecssListener)listener).enterSetOperatorNot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ecssListener ) ((ecssListener)listener).exitSetOperatorNot(this);
		}
	}

	public final SetOperatorNotContext setOperatorNot() throws RecognitionException {
		SetOperatorNotContext _localctx = new SetOperatorNotContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_setOperatorNot);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SetOperatorAnyContext extends ParserRuleContext {
		public SetOperatorAnyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setOperatorAny; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ecssListener ) ((ecssListener)listener).enterSetOperatorAny(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ecssListener ) ((ecssListener)listener).exitSetOperatorAny(this);
		}
	}

	public final SetOperatorAnyContext setOperatorAny() throws RecognitionException {
		SetOperatorAnyContext _localctx = new SetOperatorAnyContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_setOperatorAny);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(167);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComponentAsContext extends ParserRuleContext {
		public List<ComponentIdContext> componentId() {
			return getRuleContexts(ComponentIdContext.class);
		}
		public ComponentIdContext componentId(int i) {
			return getRuleContext(ComponentIdContext.class,i);
		}
		public ComponentAsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_componentAs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ecssListener ) ((ecssListener)listener).enterComponentAs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ecssListener ) ((ecssListener)listener).exitComponentAs(this);
		}
	}

	public final ComponentAsContext componentAs() throws RecognitionException {
		ComponentAsContext _localctx = new ComponentAsContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_componentAs);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(169);
			componentId();
			setState(170);
			match(T__2);
			setState(171);
			componentId();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComponentAttributesContext extends ParserRuleContext {
		public List<ComponentAttributeContext> componentAttribute() {
			return getRuleContexts(ComponentAttributeContext.class);
		}
		public ComponentAttributeContext componentAttribute(int i) {
			return getRuleContext(ComponentAttributeContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ecssParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ecssParser.COMMA, i);
		}
		public ComponentAttributesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_componentAttributes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ecssListener ) ((ecssListener)listener).enterComponentAttributes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ecssListener ) ((ecssListener)listener).exitComponentAttributes(this);
		}
	}

	public final ComponentAttributesContext componentAttributes() throws RecognitionException {
		ComponentAttributesContext _localctx = new ComponentAttributesContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_componentAttributes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(173);
			componentAttribute();
			setState(178);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(174);
				match(COMMA);
				setState(175);
				componentAttribute();
				}
				}
				setState(180);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComponentAttributeContext extends ParserRuleContext {
		public ComponentIdContext componentId() {
			return getRuleContext(ComponentIdContext.class,0);
		}
		public ComponentAttributeComparatorContext componentAttributeComparator() {
			return getRuleContext(ComponentAttributeComparatorContext.class,0);
		}
		public ComponentAttributeValueContext componentAttributeValue() {
			return getRuleContext(ComponentAttributeValueContext.class,0);
		}
		public ComponentAttributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_componentAttribute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ecssListener ) ((ecssListener)listener).enterComponentAttribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ecssListener ) ((ecssListener)listener).exitComponentAttribute(this);
		}
	}
